2008-02-19  yetist  <yetist@gmail.com>

	* lunar/lunar-date.h: 
	* lunar/update-calendar.sh: 
	* lunar/lunar.h: 
	* lunar/calendar.patch: 
	* lunar/lunar-main.h: 
	* lunar/lunar-calendar.c: 
	* lunar/Makefile.am: 
	fixed that if select day changed, the header doesn't change.
	* bindings/python/calendar.override: 
	* bindings/python/lunarmodule.c: 
	* bindings/python/Makefile.am: 
	* bindings/python/lunar-demo.py: 
	* configure.ac: 
	* Makefile.am: 
	* liblunar-1.pc.in: 
	change the python module to "lunar".

2008-02-19  yetist  <yetist@gmail.com>

	* AUTHORS: 
	* Makefile.am: 
	* README: 
	* autogen.sh: 
	* configure.ac: 
	* liblunar-1.pc.in: 
	* bindings/: 
	* data/: 
	* debian/: 
	* docs/: 
	* lunar/: 
	* po/: 
	* tests/: 
	rename api from "gcl" to "lunar"

2008-02-19  yetist  <yetist@gmail.com>

	* lunar/*lunar*:
	* gcl/*gcl*: 
	* debian/*lunar*: 
	* libgcl-1.pc.in: 
	* liblunar-1.pc.in: 
	rename that files from "gcl" to "lunar"

=== libgcl-0.2.4 released ===

2008-02-05  yetist  <yetist@gmail.com>

	* configure.ac: 
	* NEWS: 

	libgcl-0.2.4 released

2008-02-04  yetist  <yetist@gmail.com>

	* bindings/python/gcl-demo.py: update

2008-02-04  yetist  <yetist@gmail.com>

	* bindings/python/gclmodule.c: 
	* bindings/python/gcl-demo.py: 
	add flags to modules.
	
2008-02-04  yetist  <yetist@gmail.com>

	* bindings/python/Makefile.am: 
	* bindings/python/date.override: 
	* bindings/python/date.defs: 
	remove date for python bindings.

2008-02-04  yetist  <yetist@gmail.com>

	* bindings/python/calendar.override: 
	* bindings/python/Makefile.am: 
	* bindings/python/gclmodule.c: 
	* bindings/python/gcl-demo.py: 
	python bindings of gclcalendar

2008-02-03  yetist  <yetist@gmail.com>

	* gcl/gcl-enum-types.c.template: 
	* gcl/gcl-enum-types.h.template: 
	add template of gcl-enum-types.[hc]

2008-02-03  yetist  <yetist@gmail.com>

	* m4: 
	* m4/python.m4: 
	add python.m4

2008-02-03  yetist  <yetist@gmail.com>

	* bindings: 
	* bindings/python: 